...
      />
      <Tabs.Screen
        name="Settings"
        component={SettingsScreen}
        options={{
          title: '設定',
          tabBarButtonTestID: 'tab-settings',
          tabBarIcon: ({ color, size, focused }) => (
            <Ionicons name={focused ? 'settings' : 'settings-outline'} size={size} color={color} />
          ),
        }}
      />
    </Tabs.Navigator>
...
